Fixed some file structure issues

--- a/agda_tree/pyproject.toml
+++ b/agda_tree/pyproject.toml
@@ -28,4 +28,4 @@ dependencies = [
 Homepage = "https://github.com/JulianVidal/AGDA_HTML"
 
 [project.scripts]
-agda_tree = "agda_tree:main"
+agda_tree = "agda_tree.cli:run"
